--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
-title: Ibigbemi Christiana Tolani
+title: Ibigbemi Tolani
 logo: tola.jpg
+Description: Personal portfolio and blog of Ibigbemi Tolani sharing ideas,projects and stories on Data Analytics.
 theme: jekyll-theme-minimal
